# huge_global_alloc

./: Cargo.toml  README.md  test.sh
src/: lib.rs  mmap.rs  mmapper.rs
src/tests/: mod.rs
