[package]
name = "huge_global_alloc"
version = "0.1.0"
edition = "2021"
authors = ["Andy Ward (andy.ward.uk@gmail.com)"]

[dependencies]
nix = { version = "0.25.0", features = ["mman"] }
lazy_static = "1.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
